Fixed loop issue on desktop portfolio. Removed CTA button on mobile. Can be placed back later or altered but needs to be discussed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -375,8 +375,8 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.25), 0 0 80rem 0.25rem rgba(255, 255, 255, 0.25), inset 2px 2px 0 rgba(255, 255, 255, 0.25);
     -webkit-transition: filter 0.75s ease;
     transition: filter 0.75s ease;
-    -webkit-transition: box-shadow 3s ease;
-    transition: box-shadow 3s ease;
+    -webkit-transition: box-shadow 2s ease;
+    transition: box-shadow 2s ease;
   }
 
   #portfolio .swiper-slide-active img {
@@ -384,8 +384,8 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.25), 0 0 80rem 0.25rem rgba(255, 255, 255, 0.25), inset 2px 2px 0 rgba(255, 255, 255, 0.25);
     -webkit-transition: filter 0.75s ease;
     transition: filter 0.75s ease;
-    -webkit-transition: box-shadow 3s ease;
-    transition: box-shadow 3s ease;
+    -webkit-transition: box-shadow 2s ease;
+    transition: box-shadow 2s ease;
   }
 
   @media only screen and (max-width: 767px) {
@@ -394,20 +394,20 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
       box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.25), 0 0 80rem 0.25rem rgba(255, 255, 255, 0.25), inset 2px 2px 0 rgba(255, 255, 255, 0.25);
       -webkit-transition: filter 0.75s ease;
       transition: filter 0.75s ease;
-      -webkit-transition: box-shadow 3s ease;
-      transition: box-shadow 3s ease;
+      -webkit-transition: box-shadow 2s ease;
+      transition: box-shadow 2s ease;
     }
   }
 
   /* Temp Fix for Mobile Slider on Portfolio Page */
-  @media only screen and (max-width: 767px) {
+  /* @media only screen and (max-width: 767px) {
     #portfolio .swiper-slide:last-child img {
       filter: brightness(100%) !important;
     }
     #portfolio .swiper-slide-active:last-child img {
       box-shadow: none;
     }
-  }
+  } */
 
   @media only screen and (max-width: 767px) {
     #portfolio .swiper-container {
@@ -456,8 +456,8 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
 
   #portfolio .swiper-slide img {
     filter: brightness(20%);
-    -webkit-transition: filter 0.5s ease;
-    transition: filter 0.5s ease;
+    -webkit-transition: filter 0.75s ease;
+    transition: filter 0.75s ease;
   }
 
   #portfolio .swiper-slide-active hr {
